Version 0.9.5-svn - unknown
- rename execgwcustomcmd() to playsmsd()
- change label success to handled and fail to unhandled, status on incoming SMS (anton)
- revert back kannel gateway, use fsockopen due to improper HTTP response from kannel (srosa)
- fix allow \r and \n in SMS text, http://smstools3.kekekasvi.com/topic.php?id=328 (anton)
- fix kannel gateway, bearerbox to accept hostname, not only IP (srosa)
- fix kannel gateway, missing bearerbox host and sendsms port, plugin/gateway/kannel/fn.php (anton)
- fix dlr-url misformed, plugin/gateway/kannel/fn.php (anton)
- fix RFI LFI bug, http://www.securityfocus.com/bid/33138 (anton)

Version 0.9.4 - 080713
- on themes, add loginpage.php and rename welcome.php to default.php
- remove bin/kannel_incoming.sh
- kannel can only pass MOs to playSMS using geturl method, see contrib/kannel/kannel.conf
- remove PlaySMS Web URL and Kannel Incoming Path, kannel gateway, kannel.php
- change delivery mechanism, now using file_get_contents instead of fsockopen, kannel gateway
- fix (again and again), mclass=0 for flash, mclass=1 for text to mobile, kannel gateway, fn.php
- fix delivering messages, anticipate responses from kannel latest version, kannel gateway
- fix admin auth for non multi session login
- fix user preferences unable to modify email
- change default login type to non multi session login

Version 0.9.3 - 080520
- NOTE: PHP PEAR and PEAR-DB are removed from playSMS package, please install them manually
- lib/fn_sendsms.php, websend2pv(), websend2group() returns array status, destination, smslog_id
- fix mobile2uid() in lib/fn_user.php returns wrong value, should be $uid
- fix locating base application path, previously failed to autodetect paths correctly
- fix admin editing user, previously sender id was not shown correctly
- fix sms_poll not handling keyword correctly, sms_poll_handle(), target_choice = poll_param
- fix playsmsd process, changes to config file and php sources not updated